add: small tweaks in ui

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@permaweb/aoconnect": "^0.0.62",
     "@radix-ui/react-slot": "^1.1.0",
     "@tsparticles/engine": "^3.7.1",
